--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "css-polyfills": "^0.0.16",
     "nes.css": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
