--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
 		"axios": "^0.25.0",
+		"classnames": "^2.3.1",
 		"nes.css": "^2.3.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -58,7 +59,5 @@
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"prettier": "^2.5.1"
-
-		
 	}
 }
